[package]
name = "rust-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = { version = "1.0.145" }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tower = {version = "0.5.2", features = ["util", "timeout"]}
tower-http = {version = "0.6.6", features = ["add-extension", "trace"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["env-filter"]}
uuid = {version = "1.18.1",  features = ["serde", "v4"]}
